This is just to motivate myself to improve a little bit every day :)

Best: 16

08-04-2024
Streak: 16
Learned:
Did:
    -Add standard padding definitions for different screen sizes

07-04-2024
Streak: 15
Learned:
Did:
    -Split colours from theme into separate file + function
    -Make colours providable to other composables in the tree using CompositionLocalProvider
    -Make MainMenuSub component, to hold different sub menus that are displayable on the main menu
    -Add transparency to ImageButton component, make the day part menu buttons slightly transparent
    -Remove hardcoded string, allow title of SubMenu now to be passed as param

06-04-2024
Streak: 14
Learned:
    -Read about using CompositionLocal (again) - this time in the context of passing theme colours.
Did:
    -Update notes on how to improve adaptive ui - for future reference, don't want to work on it
        anymore right now.
    -Refactor MainMenu Button to a more generic & reusable ImageButton
    -Move new ImageButton composable to reusableUi directory (separate commit so history is preserved)

05-04-2024
Streak: 13
Learned:
Did:
    -Failed to make AdaptiveColumn respect Modifier.weight (to be set either within a ColumnScope
        or RowScope context)

04-04-2024
Streak: 12
Learned:
    -Read about adaptive layouts (I really should be storing screen size type,
        but am starting smaller)
Did:
    -Start implementing an 'AdaptiveColumn' which will display as column in Portrait, and as Row in
        landscape mode -WIP

03-04-2024
Streak: 11
Learned:
    -Read about compose modifiers
Did:
    -Separate Main Menu Buttons into separate file, add background image to them
    -Try to make layout work and respect individual item weights, but it is very obviously
        broken in landscape with the current setup
    -Fix menu buttons not displaying how I want, though still need to swap between row/column
        based on device orientation

02-04-2024
Streak: 10
Learned:
Did: